2009-05-05  Johannes Schmid <jschmid@openismus.com>

	* docs/tutorial/figures/gtk_scrolling.png:
	* docs/tutorial/figures/text.png:
	Use Clearlooks for screenshots
	
	* docs/tutorial/figures/multiline_text_entry.png:
	* docs/tutorial/figures/Makefile.am:
	Removed obsolete screenshot

2009-05-04  Murray Cumming  <murrayc@murrayc.com>

	Stage Widget Scrolling section improvements.
	
	* docs/tutorial/clutter-tut.xml: Stage Widget Scrolling: Correct the text.
	In particular, I thing Johannes meant GtkRange rather than GtkRuler.
	Put the example inside the section.
	* docs/tutorial/figures/Makefile.am: Mention gtk_scrolling.png.

2009-05-04  Johannes Schmid <jschmid@openismus.com>

  * examples/gtk_embed/main.c:
  * examples/gtk_scrolling/main.c:
  * examples/scrolling/main.c:
  * docs/tutorial/clutter-tut.xml:
  * docs/tutorial/figures/scrolling.png_
  * docs/tutorial/figures/gtk_scrolling.png:
  
  Bring back old scrolling example and reorganize tutorial
  
  The old scrolling appendix is now back in place while the gtk scrolling
  examples was moved inside the stage section near to the gtk embed widget.
  Also renamed the Gtk+ examples so that they can be recognized as part of
  clutter-gtk.

2009-05-04  Johannes Schmid <jschmid@openismus.com>

	* examples/text/main.c:
	* docs/tutorial/figures/text.png:
	
	Fixed text alignment in example and updated screenshot (#935)

2009-05-04  Johannes Schmid <jschmid@openismus.com>

	* configure.ac
	* examples/entry/*
	
	Removed obsolete entry example

2009-05-01  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/clutter-tut.xml: Correct section IDs.

2009-05-01  Murray Cumming  <murrayc@murrayc.com>

	ClutterText corrections.
	
	* docs/tutorial/clutter-tut.xml: ClutterText section: Correct/Improve the 
	text.
	* examples/text/main.c (main): Add a second ClutterText so we have one 
	non-editable and one editable multi-line editable.

2009-04-30  Murray Cumming  <murrayc@murrayc.com>

	Fix the build.
	
	* configure.ac: 